--- a/php/logger/env/docker/php8-jit/Dockerfile
+++ b/php/logger/env/docker/php8-jit/Dockerfile
@@ -16,3 +16,7 @@ RUN apt-get update && \
 	docker-php-ext-install opcache && \
 	echo "opcache.enable_cli=1" >> /usr/local/etc/php/conf.d/docker-php-ext-opcache.ini && \
 	echo "opcache.jit_buffer_size=256M" >> /usr/local/etc/php/conf.d/docker-php-ext-opcache.ini
+
+# xdebug
+RUN pecl install xdebug && \
+	echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" > /usr/local/etc/php/conf.d/xdebug.ini
