--- a/php/logger/composer.json
+++ b/php/logger/composer.json
@@ -11,16 +11,15 @@
     "ext-json": "*",
     "ext-curl": "*",
     "php": ">=8.0.2",
-    "google/cloud": "*"
+    "google/cloud": "*",
+    "fluent/logger": "v1.0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "8.*"
   },
   "autoload": {
     "psr-4": {
-      "CollectorGooglePlayConsole\\": [
-        "src/CollectorGooglePlayConsole"
-      ]
+
     }
   }
 }
