--- a/php/logger/env/docker/fluentbit-forwarder/td-agent-bit.conf
+++ b/php/logger/env/docker/fluentbit-forwarder/td-agent-bit.conf
@@ -1,11 +1,18 @@
 [SERVICE]
     Flush     1
+    Log_File      /data/log/fluentbit.log
     Daemon    off
     Log_Level info
 
 [INPUT]
-    Name      cpu
+    Name   dummy
+    Tag    dummy.log
 
 [OUTPUT]
     Name      stdout
     Match     *
+
+[OUTPUT]
+    Name file
+    Match *
+    Path /data/log/td-agent-bit/
