--- a/php/logger/env/docker/php8-jit/Dockerfile
+++ b/php/logger/env/docker/php8-jit/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:8.0.2-cli
 
 # change timezone from UTC to KST
-RUN apt-get update && \
+RUN apt-get update -y && \
     apt-get install -y tzdata && \
     ln -fs /usr/share/zoneinfo/Asia/Seoul /etc/localtime && \
     dpkg-reconfigure --frontend noninteractive tzdata
@@ -12,7 +12,7 @@ RUN apt-get update && \
 #	docker-php-ext-install zip
 
 # install ext-opcache(JIT)
-RUN apt-get update && \
+RUN apt-get update -y && \
 	docker-php-ext-install opcache && \
 	echo "opcache.enable_cli=1" >> /usr/local/etc/php/conf.d/docker-php-ext-opcache.ini && \
 	echo "opcache.jit_buffer_size=256M" >> /usr/local/etc/php/conf.d/docker-php-ext-opcache.ini
