--- a/php/logger/env/docker/fluentbit-forwarder/td-agent-bit.conf
+++ b/php/logger/env/docker/fluentbit-forwarder/td-agent-bit.conf
@@ -16,3 +16,25 @@
     Name file
     Match *
     Path /data/log/td-agent-bit/
+
+
+#[OUTPUT]
+#    Name  http
+#    Match *
+#    Host  10.29.0.133
+#    Port  24225
+#    URI   /dummy_http
+#    Format json
+
+#[OUTPUT]
+#    Name  tcp
+#    Host  10.29.0.133
+#    Port  5170
+#    Format msgpack
+
+[OUTPUT]
+    Name  forward
+    Match *
+    Host  10.29.0.133
+    Port  24225
+    Tag   dummy_forward
