CBI-1920 feature: Added scribe stress-test command

--- a/php/logger/env/docker/fluentd-aggregator/Dockerfile
+++ b/php/logger/env/docker/fluentd-aggregator/Dockerfile
@@ -6,6 +6,7 @@ USER root
 RUN apk add --no-cache --update --virtual .build-deps \
         sudo build-base ruby-dev \
  && sudo gem install fluent-plugin-bigquery \
+ && sudo fluent-gem install fluent-plugin-scribe \
  && sudo gem sources --clear-all \
  && apk del .build-deps \
  && rm -rf /tmp/* /var/tmp/* /usr/lib/ruby/gems/*/cache/*.gem
