--- a/php/logger/env/docker/fluentd-aggregator/fluent.conf
+++ b/php/logger/env/docker/fluentd-aggregator/fluent.conf
@@ -32,23 +32,38 @@
 <source>
   @type  forward
   bind  0.0.0.0
-  port 24225
+  port 24224
 </source>
 
 <filter **>
   @type stdout
 </filter>
 
+#<match **>
+#  @type file
+#  path /fluentd/log
+#  compress gzip
+#  <buffer>
+#    timekey 1d
+#    timekey_use_utc true
+#    timekey_wait 10m
+#  </buffer>
+#  <format>
+#    @type json
+#  </format>
+#</match>
+
 <match **>
-  @type file
-  path /fluentd/log
-  compress gzip
+  @type scribe
+  host 127.0.0.1
+  port 1463
+  field_ref hello
   <buffer>
-    timekey 1d
-    timekey_use_utc true
-    timekey_wait 10m
+    flush_thread_count 16
+    flush_interval 5s
+    chunk_limit_size 16MB
+    queue_limit_length 16
+    retry_max_interval 30
+    retry_forever true
   </buffer>
-  <format>
-    @type json
-  </format>
 </match>
