--- a/php/logger/composer.json
+++ b/php/logger/composer.json
@@ -12,7 +12,7 @@
     "ext-curl": "*",
     "php": ">=8.0.2",
     "google/cloud": "*",
-    "fluent/logger": "v1.0.0"
+    "chirichidi/logger": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "8.*"
