--- a/php/logger/env/docker/fluentd-aggregator/fluent.conf
+++ b/php/logger/env/docker/fluentd-aggregator/fluent.conf
@@ -1,13 +1,18 @@
-<source>
-  @type tail
-  @id input_tail
-  <parse>
-    @type none
-  </parse>
-  path /fluentd/tmp/log/dummy.log
-  pos_file /fluentd/tmp/log/dummy.log.pos
-  tag dummy_tail
-</source>
+#<system>
+#  workers 2
+#  root_dir /fluentd/log
+#</system>
+
+#<source>
+#  @type tail
+#  @id input_tail
+#  <parse>
+#    @type none
+#  </parse>
+#  path /fluentd/tmp/log/dummy.log
+#  pos_file /fluentd/tmp/log/dummy.log.pos
+#  tag dummy_tail
+#</source>
 #<source>
 #  @type dummy
 #  tag dummy_dummy
@@ -29,6 +34,13 @@
 #  bind 0.0.0.0
 #  delimiter "\n"
 #</source>
+#<worker 0>
+#    <source>
+#      @type  forward
+#      bind  0.0.0.0
+#      port 24224
+#    </source>
+#</worker>
 <source>
   @type  forward
   bind  0.0.0.0
@@ -53,17 +65,36 @@
 #  </format>
 #</match>
 
-<match **>
+#<worker 1>
+<match bie-sc2bq-log>
   @type scribe
   host 127.0.0.1
   port 1463
-  field_ref hello
+  field_ref data
+  #format_to_json true # 옵션 키면 스크라이브에서 "key" => "value" 다 출력, 끄면 value 만 출력
+
   <buffer>
-    flush_thread_count 16
-    flush_interval 5s
+    @type file
+    path /fluentd/log/td-agent/buffer/${tag}_${chunk_id}
+
     chunk_limit_size 16MB
-    queue_limit_length 16
-    retry_max_interval 30
-    retry_forever true
+    total_limit_size 32GB # (total_limit_size / chunk_limit_size) => queue length
+
+##TODO 1 unexpected error while checking flushed chunks. ignored. error_class=IOError error="closed stream" 에러 발생중.
+    flush_thread_count 8 #The number of threads to flush/write chunks in parallel
+    flush_interval 1s
+
+    retry_max_times 30
+    retry_wait 5s
+    #retry_forever true
   </buffer>
+
+#  <secondary>
+#  	@type file
+#  	path /fluentd/log/td-agent/buffer/${tag}_${chunk_id}
+#  </secondary>
+#  <format>
+#    @type json
+#  </format>
 </match>
+#</worker>
