CBI-1920 conf: customized fluentd conf

--- a/php/logger/env/docker/fluentd-aggregator/fluent.conf
+++ b/php/logger/env/docker/fluentd-aggregator/fluent.conf
@@ -78,7 +78,8 @@
     path /fluentd/log/td-agent/buffer/${tag}_${chunk_id}
 
     chunk_limit_size 16MB
-    total_limit_size 32GB # (total_limit_size / chunk_limit_size) => queue length
+    total_limit_size 256GB # (total_limit_size / chunk_limit_size) => queue length
+    queued_chunks_limit_size 8
 
 ##TODO 1 unexpected error while checking flushed chunks. ignored. error_class=IOError error="closed stream" 에러 발생중.
     flush_thread_count 8 #The number of threads to flush/write chunks in parallel
