--- a/php/logger/env/docker/fluentd-aggregator/fluent.conf
+++ b/php/logger/env/docker/fluentd-aggregator/fluent.conf
@@ -3,6 +3,22 @@
 #  root_dir /fluentd/log
 #</system>
 
+# expose metrics in prometheus format
+<source>
+  @type prometheus
+  bind 0.0.0.0
+  port 24231
+  metrics_path /metrics
+</source>
+
+<source>
+  @type prometheus_output_monitor
+  interval 10
+  <labels>
+    hostname ${hostname}
+  </labels>
+</source>
+
 #<source>
 #  @type tail
 #  @id input_tail
@@ -34,21 +50,22 @@
 #  bind 0.0.0.0
 #  delimiter "\n"
 #</source>
-#<worker 0>
-#    <source>
-#      @type  forward
-#      bind  0.0.0.0
-#      port 24224
-#    </source>
-#</worker>
 <source>
   @type  forward
   bind  0.0.0.0
   port 24224
 </source>
 
-<filter **>
-  @type stdout
+#<filter **>
+#  @type stdout
+#</filter>
+<filter bie-sc2bq-log>
+  @type prometheus
+  <metric>
+    name fluentd_input_status_num_records_total
+    type counter
+    desc The total number of incoming records
+  </metric>
 </filter>
 
 #<match **>
@@ -68,34 +85,46 @@
 #<worker 1>
 <match bie-sc2bq-log>
   @type scribe
-  host 127.0.0.1
+  host 172.26.107.147
   port 1463
   field_ref data
   #format_to_json true # 옵션 키면 스크라이브에서 "key" => "value" 다 출력, 끄면 value 만 출력
 
   <buffer>
     @type file
-    path /fluentd/log/td-agent/buffer/${tag}_${chunk_id}
+    path /fluentd/log/td-agent/buffer/scribe
 
     chunk_limit_size 16MB
     total_limit_size 256GB # (total_limit_size / chunk_limit_size) => queue length
     queued_chunks_limit_size 8
 
-##TODO 1 unexpected error while checking flushed chunks. ignored. error_class=IOError error="closed stream" 에러 발생중.
-    flush_thread_count 8 #The number of threads to flush/write chunks in parallel
+    flush_thread_count 4 #The number of threads to flush/write chunks in parallel
     flush_interval 1s
 
     retry_max_times 30
     retry_wait 5s
     #retry_forever true
   </buffer>
-
-#  <secondary>
-#  	@type file
-#  	path /fluentd/log/td-agent/buffer/${tag}_${chunk_id}
-#  </secondary>
-#  <format>
-#    @type json
-#  </format>
+  <secondary>
+  	@type file
+  	path /fluentd/log/td-agent/secondary/scribe
+  </secondary>
 </match>
 #</worker>
+
+# count the number of outgoing records per tag
+<match **>
+  @type copy
+
+  <store>
+    @type prometheus
+    <metric>
+      name fluentd_output_status_num_records_total
+      type counter
+      desc The total number of outgoing records
+    </metric>
+  </store>
+  <store>
+    @type stdout
+  </store>
+</match>
