CBI-1976 conf: added out_file

--- a/php/logger/env/docker/fluentd-aggregator/fluent.conf
+++ b/php/logger/env/docker/fluentd-aggregator/fluent.conf
@@ -3,14 +3,12 @@
 #  root_dir /fluentd/log
 #</system>
 
-# expose metrics in prometheus format
 <source>
   @type prometheus
   bind 0.0.0.0
   port 24231
   metrics_path /metrics
 </source>
-
 <source>
   @type prometheus_output_monitor
   interval 10
@@ -18,48 +16,22 @@
     hostname ${hostname}
   </labels>
 </source>
-
-#<source>
-#  @type tail
-#  @id input_tail
-#  <parse>
-#    @type none
-#  </parse>
-#  path /fluentd/tmp/log/dummy.log
-#  pos_file /fluentd/tmp/log/dummy.log.pos
-#  tag dummy_tail
-#</source>
-#<source>
-#  @type dummy
-#  tag dummy_dummy
-#</source>
-#<source>
-#  @type http
-#  port 24225
-#  <parse>
-#    @type json
-#  </parse>
-#</source>
-#<source>
-#  @type tcp
-#  tag tcp
-#  <parse>
-#    @type msgpack
-#  </parse>
-#  port 5170
-#  bind 0.0.0.0
-#  delimiter "\n"
-#</source>
 <source>
   @type  forward
   bind  0.0.0.0
   port 24224
 </source>
+<source>
+	@type tail
+	path /fluentd/log/td-agent/secondary/scribe/*.log
+	pos_file /tmp/log/td-agent/filelog.pos
+	tag secondary.scribe.log
+	format json
+	read_from_head true
+</source>
 
-#<filter **>
-#  @type stdout
-#</filter>
-<filter bie-sc2bq-log>
+###
+<filter bie-sc2bq-log.**>
   @type prometheus
   <metric>
     name fluentd_input_status_num_records_total
@@ -67,55 +39,63 @@
     desc The total number of incoming records
   </metric>
 </filter>
+<filter **>
+  @type prometheus
+  <metric>
+    name fluentd_input_status_num_records_of_secondary
+    type counter
+    desc The total number of incoming records of secondary.scribe.log
+  </metric>
+</filter>
 
-#<match **>
-#  @type file
-#  path /fluentd/log
-#  compress gzip
-#  <buffer>
-#    timekey 1d
-#    timekey_use_utc true
-#    timekey_wait 10m
-#  </buffer>
-#  <format>
-#    @type json
-#  </format>
-#</match>
 
-#<worker 1>
-<match bie-sc2bq-log>
-  @type scribe
-  host 172.26.107.147
-  port 1463
-  field_ref data
-  #format_to_json true # 옵션 키면 스크라이브에서 "key" => "value" 다 출력, 끄면 value 만 출력
-
-  <buffer>
-    @type file
-    path /fluentd/log/td-agent/buffer/scribe
-
-    chunk_limit_size 16MB
-    total_limit_size 256GB # (total_limit_size / chunk_limit_size) => queue length
-    queued_chunks_limit_size 8
-
-    flush_thread_count 4 #The number of threads to flush/write chunks in parallel
-    flush_interval 1s
-
-    retry_max_times 30
-    retry_wait 5s
-    #retry_forever true
-  </buffer>
-  <secondary>
-  	@type file
-  	path /fluentd/log/td-agent/secondary/scribe
-  </secondary>
-</match>
-#</worker>
-
-# count the number of outgoing records per tag
-<match **>
+<match bie-sc2bq-log.**>
   @type copy
 
+  <store>
+    @type file
+    path /fluentd/log/td-agent/file/${tag}.%Y%m%d.%H%M
+    symlink_path /fluentd/log/td-agent/file/current-${tag}
+
+    <buffer tag,time>
+      timekey 1m
+      path /fluentd/log/td-agent/buffer/file
+    </buffer>
+    <secondary>
+		@type secondary_file
+		directory /fluentd/log/td-agent/secondary/file
+	</secondary>
+    <format>
+      @type json #https://docs.fluentd.org/formatter/json
+    </format>
+  </store>
+
+  <store>
+    @type scribe
+    host 172.26.107.147
+    port 1463
+    field_ref data
+
+    <buffer>
+      @type file
+      path /fluentd/log/td-agent/buffer/scribe
+
+      chunk_limit_size 16MB
+      total_limit_size 256GB # (total_limit_size / chunk_limit_size) => queue length
+      queued_chunks_limit_size 8
+
+      flush_thread_count 4 #The number of threads to flush/write chunks in parallel
+      flush_interval 1s
+
+      retry_max_times 1
+      retry_wait 10s
+      #retry_forever true
+    </buffer>
+    <secondary>
+		@type secondary_file
+		directory /fluentd/log/td-agent/secondary/scribe
+	</secondary>
+  </store>
   <store>
     @type prometheus
     <metric>
@@ -124,7 +104,7 @@
       desc The total number of outgoing records
     </metric>
   </store>
-  <store>
-    @type stdout
-  </store>
+</match>
+<match secondary.scribe.log>
+  @type stdout
 </match>
