--- a/php/logger/env/docker/fluentd-aggregator/fluent.conf
+++ b/php/logger/env/docker/fluentd-aggregator/fluent.conf
@@ -3,50 +3,43 @@
 #  root_dir /fluentd/log
 #</system>
 
-<source>
-  @type prometheus
-  bind 0.0.0.0
-  port 24231
-  metrics_path /metrics
-</source>
-<source>
-  @type prometheus_output_monitor
-  interval 10
-  <labels>
-    hostname ${hostname}
-  </labels>
-</source>
+#<source>
+#  @type prometheus
+#  bind 0.0.0.0
+#  port 24231
+#  metrics_path /metrics
+#</source>
+#<source>
+#  @type prometheus_output_monitor
+#  interval 10
+#  <labels>
+#    hostname ${hostname}
+#  </labels>
+#</source>
 <source>
   @type  forward
   bind  0.0.0.0
   port 24224
 </source>
-<source>
-	@type tail
-	path /fluentd/log/td-agent/secondary/scribe/*.log
-	pos_file /tmp/log/td-agent/filelog.pos
-	tag secondary.scribe.log
-	format json
-	read_from_head true
-</source>
+
 
 ###
-<filter bie-sc2bq-log.**>
-  @type prometheus
-  <metric>
-    name fluentd_input_status_num_records_total
-    type counter
-    desc The total number of incoming records
-  </metric>
-</filter>
-<filter **>
-  @type prometheus
-  <metric>
-    name fluentd_input_status_num_records_of_secondary
-    type counter
-    desc The total number of incoming records of secondary.scribe.log
-  </metric>
-</filter>
+#<filter bie-sc2bq-log.**>
+  #@type prometheus
+  #<metric>
+  #  name fluentd_input_status_num_records_total
+  #  type counter
+  #  desc The total number of incoming records
+  #</metric>
+#</filter>
+#<filter **>
+  #@type prometheus
+  #<metric>
+  #  name fluentd_input_status_num_records_of_secondary
+  #  type counter
+  #  desc The total number of incoming records of secondary.scribe.log
+  #</metric>
+#</filter>
 
 
 <match bie-sc2bq-log.**>
@@ -54,56 +47,26 @@
 
   <store>
     @type file
-    path /fluentd/log/td-agent/file/${tag}.%Y%m%d.%H%M
-    symlink_path /fluentd/log/td-agent/file/current-${tag}
+    path /fluentd/log/file/${tag}.%Y%m%d.%H%M
+    symlink_path /tmp/current-${tag}
 
     <buffer tag,time>
+      timekey_wait 10m
       timekey 1m
-      path /fluentd/log/td-agent/buffer/file
+      path /fluentd/log/buffer/buffer.*.log
     </buffer>
-    <secondary>
-		@type secondary_file
-		directory /fluentd/log/td-agent/secondary/file
-	</secondary>
     <format>
       @type json #https://docs.fluentd.org/formatter/json
     </format>
   </store>
-
-  <store>
-    @type scribe
-    host 172.26.107.147
-    port 1463
-    field_ref data
-
-    <buffer>
-      @type file
-      path /fluentd/log/td-agent/buffer/scribe
-
-      chunk_limit_size 16MB
-      total_limit_size 256GB # (total_limit_size / chunk_limit_size) => queue length
-      queued_chunks_limit_size 8
-
-      flush_thread_count 4 #The number of threads to flush/write chunks in parallel
-      flush_interval 1s
-
-      retry_max_times 1
-      retry_wait 10s
-      #retry_forever true
-    </buffer>
-    <secondary>
-		@type secondary_file
-		directory /fluentd/log/td-agent/secondary/scribe
-	</secondary>
-  </store>
-  <store>
-    @type prometheus
-    <metric>
-      name fluentd_output_status_num_records_total
-      type counter
-      desc The total number of outgoing records
-    </metric>
-  </store>
+#  <store>
+#    @type prometheus
+#    <metric>
+#      name fluentd_output_status_num_records_total
+#      type counter
+#      desc The total number of outgoing records
+#    </metric>
+#  </store>
 </match>
 <match secondary.scribe.log>
   @type stdout
