--- a/php/logger/env/docker/fluentd-aggregator/fluent.conf
+++ b/php/logger/env/docker/fluentd-aggregator/fluent.conf
@@ -1,73 +1,28 @@
-#<system>
-#  workers 2
-#  root_dir /fluentd/log
-#</system>
-
-#<source>
-#  @type prometheus
-#  bind 0.0.0.0
-#  port 24231
-#  metrics_path /metrics
-#</source>
-#<source>
-#  @type prometheus_output_monitor
-#  interval 10
-#  <labels>
-#    hostname ${hostname}
-#  </labels>
-#</source>
 <source>
   @type  forward
+  @id game
+  @label @mainstream
   bind  0.0.0.0
   port 24224
 </source>
 
+<label @mainstream>
+    <match bie-sc2bq-log.**>
+      @type copy
 
-###
-#<filter bie-sc2bq-log.**>
-  #@type prometheus
-  #<metric>
-  #  name fluentd_input_status_num_records_total
-  #  type counter
-  #  desc The total number of incoming records
-  #</metric>
-#</filter>
-#<filter **>
-  #@type prometheus
-  #<metric>
-  #  name fluentd_input_status_num_records_of_secondary
-  #  type counter
-  #  desc The total number of incoming records of secondary.scribe.log
-  #</metric>
-#</filter>
+      <store>
+        @type file
+        path /fluentd/log/${tag}__%Y%m%d__%H%M
+        symlink_path /fluentd/log/current-${tag}
 
-
-<match bie-sc2bq-log.**>
-  @type copy
-
-  <store>
-    @type file
-    path /fluentd/log/file/${tag}.%Y%m%d.%H%M
-    symlink_path /tmp/current-${tag}
-
-    <buffer tag,time>
-      timekey_wait 10m
-      timekey 1m
-      path /fluentd/log/buffer/buffer.*.log
-    </buffer>
-    <format>
-      @type json #https://docs.fluentd.org/formatter/json
-    </format>
-  </store>
-#  <store>
-#    @type prometheus
-#    <metric>
-#      name fluentd_output_status_num_records_total
-#      type counter
-#      desc The total number of outgoing records
-#    </metric>
-#  </store>
-</match>
-<match secondary.scribe.log>
-  @type stdout
-</match>
+        <buffer tag,time>
+          timekey_wait 1m
+          timekey 1m
+          path /fluentd/log/buffer.*.log
+        </buffer>
+        <format>
+          @type json ####https://docs.fluentd.org/formatter/json
+        </format>
+      </store>
+    </match>
+</label>
