solved host mounted window dir volume issue #2

--- a/php/logger/env/docker/fluentd-aggregator/fluent.conf
+++ b/php/logger/env/docker/fluentd-aggregator/fluent.conf
@@ -23,6 +23,10 @@
         <format>
           @type json ####https://docs.fluentd.org/formatter/json
         </format>
+        <secondary>
+     	  @type file
+     	  path /fluentd/log/secondary/failed-bie-sc2bq-log
+        </secondary>
       </store>
     </match>
 </label>
