--- a/php/logger/env/docker/fluentd-aggregator/fluent.conf
+++ b/php/logger/env/docker/fluentd-aggregator/fluent.conf
@@ -1,32 +1,32 @@
 <source>
   @type  forward
-  @id game
-  @label @mainstream
+  @id gamelog
+  @label @gamelogstream
   bind  0.0.0.0
   port 24224
 </source>
 
-<label @mainstream>
+<label @gamelogstream>
+    <filter **>
+      @type stdout
+    </filter>
+
     <match bie-sc2bq-log.**>
       @type copy
 
       <store>
         @type file
-        path /fluentd/log/${tag}__%Y%m%d__%H%M
+        path /fluentd/log/${tag}__%Y%m%d%H%M_   #### ex) bie-sc2bq-log.test__202202050613__0.log
         symlink_path /fluentd/log/current-${tag}
 
         <buffer tag,time>
           timekey_wait 1m
           timekey 1m
-          path /fluentd/log/buffer.*.log
+          path /fluentd/log/buffer/buffer.*.log
         </buffer>
         <format>
-          @type json ####https://docs.fluentd.org/formatter/json
+          @type json
         </format>
-        <secondary>
-     	  @type file
-     	  path /fluentd/log/secondary/failed-bie-sc2bq-log
-        </secondary>
       </store>
     </match>
 </label>
